add: booking, animation, modal || fixbug: admin dashboard, login/register and something